test/sema/typeck/pattern/lit-int-wrong-type.dora
fn f(x: (String, Bool)) {
    let (y, 2) = x;
}
